overflow fix

--- a/testsite/css/style.css
+++ b/testsite/css/style.css
@@ -311,6 +311,7 @@ background-color: #ebebeb;
 	margin-top: -45px;
 	opacity:0.6;
 filter:alpha(opacity=60); /* For IE8 and earlier */
+overflow: hidden;
 }
 
 .diamond img:hover {
